--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="css/main.css" rel="stylesheet"/>
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link href="jquery-ui/jquery-ui.css" rel="stylesheet"/>
 
     <!-- photoswipe -->
     <link rel="stylesheet" href="photoswipe/photoswipe.css"> 
@@ -195,10 +194,7 @@
     </div>
 </div>
 
-<script src="http://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-<!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
-<!--<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>-->
-<script src="jquery-ui/jquery-ui.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="slick/slick.min.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 </body>
