--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
     <div class="container">
         <div class="section_header">
             <h1>Контакты</h1>
-            <p>Мы будем рады обсудить с вами вашу идею, ответить на все вопросы. Свяжитесь с нами одним из доступных способов. Вы также можете отправить нам сообщение используя форму ниже.</p>
+            <p>Мы будем рады обсудить с вами вашу идею, ответить на все вопросы. Свяжитесь с нами одним из доступных способов.</p>
 
             <a class="contact_item contact_mail" href="mailto:whiteaeon@gmail.com">whiteaeon@gmail.com</a> 
             <a class="contact_item contact_skype" href="skype:whiteaeon">whiteaeon</a>
         </div>
     </div>
-
+<!--
     <form class="letter_form">
         <textarea name="text" rows="10" placeholder="Текст сообщения"></textarea>
         <input type="email" name="email" placeholder="Ваш email"/>
         <button class="button" type="submit">Отправить</button>
     </form>
-
+-->
     <footer id="page_footer">
         <p>© Radiant Design 2017</p>
     </footer>
