--- a/scheduler/portfolio_page.html
+++ b/scheduler/portfolio_page.html
@@ -1,4 +1,4 @@
-<div id="portfolio_scheduler" class="portfolio_page" style="background-image: url('/scheduler/background.jpg');">
+<div id="portfolio_scheduler" class="portfolio_page" style="background-image: url('scheduler/background.jpg');">
     <div class="container">
         <div class="portfolio_screens">
             <div class="device_frame frame_nexus_7">
