--- a/jewishru/portfolio_page.html
+++ b/jewishru/portfolio_page.html
@@ -1,4 +1,4 @@
-<div id="portfolio_jewishru" class="portfolio_page" style="background-image: url('/jewishru/background.jpg');">
+<div id="portfolio_jewishru" class="portfolio_page" style="background-image: url('jewishru/background.jpg');">
     <div class="container">
         <div class="portfolio_screens">
             <div class="device_frame frame_nexus_4">
