--- a/lyrsense/portfolio_page.html
+++ b/lyrsense/portfolio_page.html
@@ -1,4 +1,4 @@
-<div id="portfolio_lyrsense" class="portfolio_page" style="background-image: url('/lyrsense/background.jpg');">
+<div id="portfolio_lyrsense" class="portfolio_page" style="background-image: url('lyrsense/background.jpg');">
     <div class="container">
         <div class="portfolio_screens">
             <div class="device_frame frame_iphone_plus">
