--- a/myhouse/portfolio_page.html
+++ b/myhouse/portfolio_page.html
@@ -1,4 +1,4 @@
-<div id="portfolio_myhouse" class="portfolio_page" style="background-image: url('/myhouse/background.jpg');">
+<div id="portfolio_myhouse" class="portfolio_page" style="background-image: url('myhouse/background.jpg');">
     <div class="container">
         <div class="portfolio_screens">
             <div class="device_frame frame_iphone_plus">
