--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Radiant Design</title>
+    <title>Radiant Design - Разработка мобильных приложений на заказ</title>
+    <meta name="description" content="Мы разрабатываем приложения для iOS и Android на заказ. Имея многолетний опыт работы, мы способны воплотить в жизнь вашу идею любой сложности." />
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Radiant Design - Разработка мобильных приложений на заказ" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://radiantdesign.ru/" />
+    <meta property="og:image" content="http://radiantdesign.ru/img/social_share.jpg" />
+    <meta property="og:description" content="Мы разрабатываем приложения для iOS и Android на заказ. Имея многолетний опыт работы, мы способны воплотить в жизнь вашу идею любой сложности." />
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet"/>
@@ -196,5 +204,17 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="slick/slick.min.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-96468724-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
