Изменил контактный email

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="section_header">
             <h1>Контакты</h1>
             <p>Мы будем рады обсудить с вами вашу идею, ответить на все вопросы. Свяжитесь с нами одним из доступных способов.</p>
-            <a class="contact_item contact_mail" href="mailto:whiteaeon@gmail.com">whiteaeon@gmail.com</a> 
+            <a class="contact_item contact_mail" href="mailto:contact@radiantdesign.ru">contact@radiantdesign.ru</a> 
             <a class="contact_item contact_skype" href="skype:whiteaeon">whiteaeon</a>
         </div>
     </div>
