--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="container">
         <div class="section_header">
             <h1>Работы</h1>
-            <p>За время существования нашей компании мы разработали множество приложений как для наших заказчиков так и своих собственных.
+            <p>За время существования нашей компании мы разработали множество приложений как для наших заказчиков, так и своих собственных.
             Мы гордимся своей работой и представляем вашему вниманию наше актуальное портфолио.</p>
         </div>
     </div>
@@ -96,8 +96,8 @@
             <ol>
             <li><p>Наша совместная работа начинается с обсуждения будущего проекта. 
                 Мы анализируем требования, рассматриваем и предлагаем различные варианты решения поставленных задач. 
-                Результатом этого этапа является четкое и понятное для обоих сторон техническое задание на разработку. 
-                На основе этого документа мы можем расчитать цену и сроки.</p></li>
+                Результатом этого этапа является четкое и понятное для обеих сторон техническое задание на разработку. 
+                На основе этого документа мы можем рассчитать цену и сроки.</p></li>
 
             <li><p>Следующий этап - разработка интерфейса. Создать удобный и понятный для пользователей дизайн 
                 приложения это наша главная задача.
