--- a/myhouse/portfolio_page.html
+++ b/myhouse/portfolio_page.html
@@ -22,8 +22,8 @@
         <div class="portfolio_description">
             <h3>Мой Дом</h3>
             <p>Приложение для сервиса Мой Дом.</p>
-            <p>С помощью этого приложения пользователь может получить оперативную информацию с точностью до определенного дома. Приложение информирует пользователя об отключениях, авариях и времени их устранения а также других важных новостях.</p>
-            <p>Важным разделом являются новости города. Там пользователь может узнать про актуальные события своего города. Аналогичным функционалом обладает раздел администрации города.</p>
+            <p>С помощью этого приложения пользователь может получить оперативную информацию с точностью до определенного дома. Приложение информирует пользователя об отключениях, авариях и времени их устранения, а также других важных новостях.</p>
+            <p>Важным разделом являются новости города. Там пользователь может узнать об актуальных событиях своего города. Аналогичным функционалом обладает раздел администрации города.</p>
         </div>
     </div>
 </div>
