--- a/scheduler/portfolio_page.html
+++ b/scheduler/portfolio_page.html
@@ -19,7 +19,7 @@
         <div class="portfolio_description">
             <h3>Расписание</h3>
             <p>Данное приложение является составной частью информационной системы для учебных заведений.</p>
-            <p>Отображение расписания является основной функцией приложения. Расписание может выводится в разных режимах и адаптивно подстраиваться под размер экрана. Также есть возможность задавать фильтры по различным параметрам для уточнения выборки. У пользователя также есть возможность осуществлять поиск по мероприятиям.</p>
+            <p>Отображение расписания является основной функцией приложения. Расписание может выводиться в разных режимах и адаптивно подстраиваться под размер экрана. Также есть возможность задавать фильтры по различным параметрам для уточнения выборки. У пользователя также есть возможность осуществлять поиск по мероприятиям.</p>
             <p>Также есть возможность прикрепления текстовых заметок и файлов к мероприятиям с возможностью их дальнейшего распространения. Реализованы функции хранения и управления загруженными файлами аналогично таким сервисам как Google Drive и Яндекс Диск.</p>
         </div>
     </div>
